--- a/Project 2 Movie Search App/style.css
+++ b/Project 2 Movie Search App/style.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#movieDetail {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s linear; 
+}
+
+#movieDetail.show {
+    display: block;
+    opacity: 1;
+}
